Logica de ejercicio Cajeros Supermercado

--- a/Parte 2/ejercicios/ejercicio1.html
+++ b/Parte 2/ejercicios/ejercicio1.html
@@ -6,6 +6,89 @@
     <title>Taller 2 Ejercicio 1</title>
 </head>
 <body>
+    <div class="cajeros">
+        <div class="cajero">
+            <p>Nombre <span></span></p>
+            <p>Apellido <span></span></p>
+            <form id="cajero1">
+                <label  for="description">Ingrese la descripcion de la venta</label>
+                <input id="desc1" type="text">
+                <label for="valor">Ingrese el precio</label>
+                <input id="precio1" type="number" step="any" required>
+
+                <button type="submit">Agregar Venta</button>
+            </form>
+
+
+        </div>
+        <div class="cajero">
+            <p>Nombre <span></span></p>
+            <p>Apellido <span></span></p>
+            <form id="cajero2">
+                <label  for="description">Ingrese la descripcion de la venta</label>
+                <input id="desc2" type="text">
+                <label for="valor">Ingrese el precio</label>
+                <input id="precio2" type="number" step="any" required>
+
+                <button type="submit">Agregar Venta</button>
+            </form>
+        </div>
+        <div class="cajero">
+            <p>Nombre <span></span></p>
+            <p>Apellido <span></span></p>
+            <form id="cajero3">
+                <label for="description">Ingrese la descripcion de la venta</label>
+                <input id="desc3" type="text">
+                <label for="valor">Ingrese el precio</label>
+                <input id="precio3" type="number" step="any" required>
+
+                <button type="submit">Agregar Venta</button>
+            </form>
+        </div>
+        <div class="cajero">
+            <p>Nombre <span></span></p>
+            <p>Apellido <span></span></p>
+            <form id="cajero4">
+                <label for="description">Ingrese la descripcion de la venta</label>
+                <input id="desc4" type="text">
+                <label for="valor">Ingrese el precio</label>
+                <input id="precio4" type="number" step="any" required>
+
+                <button type="submit">Agregar Venta</button>
+            </form>
+        </div>
+        <div class="cajero">
+            <p>Nombre <span></span></p>
+            <p>Apellido <span></span></p>
+            <form id="cajero5" >
+                <label for="description">Ingrese la descripcion de la venta</label>
+                <input id="desc5" type="text">
+                <label for="valor">Ingrese el precio</label>
+                <input id="precio5" type="number" step="any" required>
+
+                <button type="submit">Agregar Venta</button>
+            </form>
+        </div>
+
+
+
+    </div>
+    <div class="resultados">
+        <div class="botonera">
+            <button id="res1">Total Ventas De Cajeros</button>
+            <button id="res2">Cajero Con Mas Ventas</button>
+            <button id="res3">Dia Con Mas y Cajero</button>
+            <button id="res4">Cajero Con Menos Ventas [Dia 60]</button>
+            <button id="res5">Mejor y Peor Cajero [Dia 30]</button>
+
+        </div>
+        <section id="resultado">
+
+        </section>
+        
+
+    </div>
     
+    <script src="../js/ejercicio1.js"></script>
 </body>
 </html>
