Logica Triqui e Interfaz Numero positivo-negativo

--- a/Parte 1/ejercicios/ejercicio1.html
+++ b/Parte 1/ejercicios/ejercicio1.html
@@ -6,6 +6,12 @@
     <title>Taller 2 Ejercicio 1</title>
 </head>
 <body>
+    <label for="numero">Ingrese el numero que quiere comprobar</label>
+    <input type="number" id="numero">
+    <button id="numberCheck">Comprobar Numero</button>
+
+
+    <script src="../js/ejercicio1.js"></script>
     
 </body>
 </html>
