--- a/Parte 2/ejercicios/ejercicio3.html
+++ b/Parte 2/ejercicios/ejercicio3.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller 2 Ejercicio 3</title>
+    <link rel="stylesheet" href="../css/ejercicio3.css">
 </head>
 <body>
-    
+    <h2 id="juego">Resultado</h2>
+    <div class="triqui">
+        <div class="fila">
+            <div id="celda-0-0" data-fila='0' data-columna='0' class="celda"></div>
+            <div id="celda-0-1" data-fila='0' data-columna='1' class="celda"></div>
+            <div id="celda-0-2" data-fila='0' data-columna='2' class="celda"></div>
+    </div>
+    <div class="fila">
+            <div id="celda-1-0" data-fila='1' data-columna='0' class="celda"></div>
+            <div id="celda-1-1" data-fila='1' data-columna='1' class="celda"></div>
+            <div id="celda-1-2" data-fila='1' data-columna='2' class="celda"></div>
+    </div>
+    <div class="fila">
+            <div id="celda-2-0" data-fila='2' data-columna='0' class="celda"></div>
+            <div id="celda-2-1" data-fila='2' data-columna='1' class="celda"></div>
+            <div id="celda-2-2" data-fila='2' data-columna='2' class="celda"></div>
+    </div> 
+
+    </div>
+    <button id="start">Start/Reset</button>
+    <script src="../js/ejercicio3.js"></script>
 </body>
 </html>
