Logica juego Ahorcado

--- a/Parte 2/ejercicios/ejercicio4.html
+++ b/Parte 2/ejercicios/ejercicio4.html
@@ -6,6 +6,23 @@
     <title>Taller 2 Ejercicio 4</title>
 </head>
 <body>
+    <div class="contenedor">
+        <button id="start">iniciar</button>
+        <form id="user-input">
+            <input id="letra" type="text" placeholder="Dame una letra" maxlength="1"> 
+            <button id="boton">Comprobar</button>
+
+        </form>        
+        <div id="resultado"></div>
+        <h2>Intentos</h2>
+        <div id="intentos"></div>
+        <h2>Historial</h2>
+        <div id="historial"></div> 
+
+
+    </div>
+       
     
+    <script src="../js/ejercicio4.js"></script>
 </body>
 </html>
