--- a/Parte 2/ejercicios/ejercicio4.html
+++ b/Parte 2/ejercicios/ejercicio4.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller 2 Ejercicio 4</title>
+    <link rel="stylesheet" href="../css/ejercicio4.css">
 </head>
 <body>
     <div class="contenedor">
