Estilos Ejercicio Cajero

--- a/Parte 2/ejercicios/ejercicio1.html
+++ b/Parte 2/ejercicios/ejercicio1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller 2 Ejercicio 1</title>
+    <link rel="stylesheet" href="../css/ejercicio1.css">
 </head>
 <body>
     <div class="cajeros">
@@ -80,6 +81,7 @@
             <button id="res3">Dia Con Mas y Cajero</button>
             <button id="res4">Cajero Con Menos Ventas [Dia 60]</button>
             <button id="res5">Mejor y Peor Cajero [Dia 30]</button>
+            <button id="aleatorio">Agregar Ventas Aleatorias</button>
 
         </div>
         <section id="resultado">
