taller Avanzado JavaScript Semana Santa

--- a/Parte 2/ejercicios/ejercicio3.html
+++ b/Parte 2/ejercicios/ejercicio3.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/ejercicio3.css">
 </head>
 <body>
+    <div class="nav">
+        <a href="../../index.html"><button>Home</button></a>
+    </div>
     <h2 id="juego">Resultado</h2>
     <div class="triqui">
         <div class="fila">
