--- a/Parte 2/ejercicios/ejercicio1.html
+++ b/Parte 2/ejercicios/ejercicio1.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/ejercicio1.css">
 </head>
 <body>
+    <div class="nav">
+        <a href="../../index.html"><button>Home</button></a>
+    </div>
     <div class="cajeros">
         <div class="cajero">
             <p>Nombre <span></span></p>
