--- a/Parte 2/ejercicios/ejercicio2.html
+++ b/Parte 2/ejercicios/ejercicio2.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/ejercicio2.css">
 </head>
 <body>
+    <div class="nav">
+        <a href="../../index.html"><button>Home</button></a>
+    </div>
     <div class="contenedor">
         <form >
             <input id="number" type="number" min="1" max="1000" placeholder="Ingrese su numero">
