--- a/Parte 2/ejercicios/ejercicio4.html
+++ b/Parte 2/ejercicios/ejercicio4.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../css/ejercicio4.css">
 </head>
 <body>
+    <div class="nav">
+        <a href="../../index.html"><button>Home</button></a>
+    </div>
     <div class="contenedor">
         <button id="start">iniciar</button>
         <form id="user-input">
